# ScriptMacro

./: Cargo.toml  README.md
src/: main.rs
src/functions/: init.rs  lib.rs  mod.rs  run_macro.rs  tui.rs
src/functions/menu/: add.rs  del.rs  edit.rs  mod.rs  view.rs
