[package]
name = "promng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = {version = "0.17", features = ["toml"]}
serde_json = "1.0"
clap = { version = "3.1.0", features = ["derive"] }
reqwest = { version = "0.11.9", features = ["blocking"] }
